Add composer.lock file and implement Index.php for random quote generation

--- a/src/07-composer/composer.json
+++ b/src/07-composer/composer.json
@@ -12,5 +12,7 @@
             "email": "pazteddy@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "ajaz/random-quotes-generator-php": "^1.0"
+    }
 }
